admin sub menu pages added and attendance page redesigned

--- a/lighthr/pages/admin/admin-add-request.html
+++ b/lighthr/pages/admin/admin-add-request.html
@@ -268,19 +268,19 @@
                             <span>Leaves</span>
                         </a>
                     </li>
-                    <li>
-                        <a href="#" onClick="return false;" class="menu-toggle">
+                    <li class="">
+                        <a href="../attendance/emp-attend.html">
                             <i data-feather="book-open"></i>
                             <span>Attendance</span>
                         </a>
-                        <ul class="ml-menu">
+                        <!-- <ul class="ml-menu">
                             <li>
                                 <a href="../attendance/today-attend.html">Admin Attendance</a>
                             </li>
                             <li class="">
                                 <a href="../attendance/emp-attend.html">Employee Attendance</a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </li>
                     
                     <li>
@@ -296,13 +296,28 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="../admin/admin-workflow.html">Admin Workflow</a>
+                                <a href="../admin/admin-workflow.html">Workflow</a>
                             </li>
                             <li class="">
-                                <a href="../admin/admin-all-leave.html">Admin Leave</a>
+                                <a href="../admin/admin-all-leave.html">Leave</a>
                             </li>
                             <li class="active">
-                                <a href="../admin/admin-all-services.html">Admin Service Request</a>
+                                <a href="../admin/admin-all-services.html">Service Request</a>
+                            </li>
+                            <li class="">
+                                <a href="../admin/admin-attendance.html">Attendance</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Public Holidays</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Leave Category</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Leave Types</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Calendar settings</a>
                             </li>
                         </ul>
                     </li>
@@ -553,14 +568,14 @@
                                         <select class="col-12 m-t-20 p-l-0">
                                             <option value="" disabled selected>Request Type</option>
                                             <option value="1">Salary certificate</option>
-                                            <option value="2">Employment certificate.Rtf</option>
-                                            <option value="3">Experience certificate.Rtf</option>
-                                            <option value="4">Noc - dubai airport.Docx</option>
-                                            <option value="5">Noc - for al ansari statement of account.Rtf</option>
-                                            <option value="6">Noc - for embassy with travel dates.Rtf</option>
-                                            <option value="7">Noc - for embassy.Rtf</option>
-                                            <option value="8">Noc - golden visa.Rtf</option>
-                                            <option value="9">Salary certificate with client name.Rtf</option>
+                                            <option value="2">Employment certificate</option>
+                                            <option value="3">Experience certificate</option>
+                                            <option value="4">Noc - dubai airport</option>
+                                            <option value="5">Noc - for al ansari statement of account</option>
+                                            <option value="6">Noc - for embassy with travel dates</option>
+                                            <option value="7">Noc - for embassy</option>
+                                            <option value="8">Noc - golden visa</option>
+                                            <option value="9">Salary certificate with client name</option>
                                             <option value="10">Confirmation letter.DocxRequest date (default date)</option>
                                             <option value="11">Request Description</option>
                                         </select>
