--- a/lighthr/pages/admin/admin-all-leave.html
+++ b/lighthr/pages/admin/admin-all-leave.html
@@ -284,19 +284,19 @@ z-index: 9;
                             <span>Leaves</span>
                         </a>
                     </li>
-                    <li>
-                        <a href="#" onClick="return false;" class="menu-toggle">
+                    <li class="">
+                        <a href="../attendance/emp-attend.html">
                             <i data-feather="book-open"></i>
                             <span>Attendance</span>
                         </a>
-                        <ul class="ml-menu">
+                        <!-- <ul class="ml-menu">
                             <li>
                                 <a href="../attendance/today-attend.html">Admin Attendance</a>
                             </li>
                             <li class="">
                                 <a href="../attendance/emp-attend.html">Employee Attendance</a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </li>
                     
                     <li class="">
@@ -312,13 +312,28 @@ z-index: 9;
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="../admin/admin-workflow.html">Admin Workflow</a>
+                                <a href="../admin/admin-workflow.html">Workflow</a>
                             </li>
                             <li class="active">
-                                <a href="../admin/admin-all-leave.html">Admin Leave</a>
+                                <a href="../admin/admin-all-leave.html">Leave</a>
                             </li>
                             <li >
-                                <a href="../admin/admin-all-services.html">Admin Service Request</a>
+                                <a href="../admin/admin-all-services.html">Service Request</a>
+                            </li>
+                            <li class="">
+                                <a href="../admin/admin-attendance.html">Attendance</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Public Holidays</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Leave Category</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Leave Types</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Calendar settings</a>
                             </li>
                         </ul>
                     </li>
