--- a/lighthr/pages/admin/admin-all-services.html
+++ b/lighthr/pages/admin/admin-all-services.html
@@ -287,19 +287,19 @@ z-index: 9;
                             <span>Leaves</span>
                         </a>
                     </li>
-                    <li>
-                        <a href="#" onClick="return false;" class="menu-toggle">
+                    <li class="">
+                        <a href="../attendance/emp-attend.html">
                             <i data-feather="book-open"></i>
                             <span>Attendance</span>
                         </a>
-                        <ul class="ml-menu">
+                        <!-- <ul class="ml-menu">
                             <li>
                                 <a href="../attendance/today-attend.html">Admin Attendance</a>
                             </li>
                             <li class="">
                                 <a href="../attendance/emp-attend.html">Employee Attendance</a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </li>
                     
                     <li class="">
@@ -316,13 +316,28 @@ z-index: 9;
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="../admin/admin-workflow.html">Admin Workflow</a>
+                                <a href="../admin/admin-workflow.html">Workflow</a>
                             </li>
                             <li>
-                                <a href="../admin/admin-all-leave.html">Admin Leave</a>
+                                <a href="../admin/admin-all-leave.html">Leave</a>
                             </li>
                             <li class="active">
-                                <a href="../admin/admin-all-services.html">Admin Service Request</a>
+                                <a href="../admin/admin-all-services.html">Service Request</a>
+                            </li>
+                            <li class="">
+                                <a href="../admin/admin-attendance.html">Attendance</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Public Holidays</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Leave Category</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Leave Types</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Calendar settings</a>
                             </li>
                         </ul>
                     </li>
@@ -677,7 +692,7 @@ z-index: 9;
                             <tr class="">
                                 <td class="center">10046</td>
                                 <!-- <td class="center">1001</td> -->
-                                <td class="center">Employment certificate.Rtf</td>
+                                <td class="center">Employment certificate</td>
                                 <td class="center">17-07-2018</td>
                                 <td class="center">
                                     <div class="label l-bg-cyan shadow-style">Pending</div>
@@ -708,7 +723,7 @@ z-index: 9;
                             <tr class="">
                                 <td class="center">10047</td>
                                 <!-- <td class="center">1001</td> -->
-                                <td class="center">Experience certificate.Rtf</td>
+                                <td class="center">Experience certificate</td>
                                 <td class="center">17-07-2018</td>
                                 <td class="center">
                                     <div class="label l-bg-orange shadow-style">Reject</div>
@@ -771,7 +786,7 @@ z-index: 9;
                             <tr class="">
                                 <td class="center">10049</td>
                                 <!-- <td class="center">1001</td> -->
-                                <td class="center">Experience certificate.Rtf</td>
+                                <td class="center">Experience certificate</td>
                                 <td class="center">17-07-2018</td>
                                 <td class="center">
                                     <div class="label l-bg-cyan shadow-style">Pending</div>
@@ -802,7 +817,7 @@ z-index: 9;
                             <tr class="">
                                 <td class="center">10050</td>
                                 <!-- <td class="center">1001</td> -->
-                                <td class="center">Noc - dubai airport.Docx</td>
+                                <td class="center">Noc - dubai airport</td>
                                 <td class="center">17-07-2018</td>
                                 <td class="center">
                                     <div class="label l-bg-orange shadow-style">Reject</div>
