--- a/lighthr/pages/admin/admin-workflow.html
+++ b/lighthr/pages/admin/admin-workflow.html
@@ -284,19 +284,19 @@ z-index: 9;
                             <span>Leaves</span>
                         </a>
                     </li>
-                    <li>
-                        <a href="#" onClick="return false;" class="menu-toggle">
+                    <li class="">
+                        <a href="../attendance/emp-attend.html">
                             <i data-feather="book-open"></i>
                             <span>Attendance</span>
                         </a>
-                        <ul class="ml-menu">
+                        <!-- <ul class="ml-menu">
                             <li>
                                 <a href="../attendance/today-attend.html">Admin Attendance</a>
                             </li>
                             <li class="">
                                 <a href="../attendance/emp-attend.html">Employee Attendance</a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </li>
                     
                     <li class="">
@@ -313,13 +313,28 @@ z-index: 9;
                         </a>
                         <ul class="ml-menu">
                             <li class="active">
-                                <a href="../admin/admin-workflow.html">Admin Workflow</a>
+                                <a href="../admin/admin-workflow.html">Workflow</a>
                             </li>
                             <li class="">
-                                <a href="../admin/admin-all-leave.html">Admin Leave</a>
+                                <a href="../admin/admin-all-leave.html">Leave</a>
                             </li>
                             <li class="">
-                                <a href="../admin/admin-all-services.html">Admin Service Request</a>
+                                <a href="../admin/admin-all-services.html">Service Request</a>
+                            </li>
+                            <li class="">
+                                <a href="../admin/admin-attendance.html">Attendance</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Public Holidays</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Leave Category</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Leave Types</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Calendar settings</a>
                             </li>
                         </ul>
                     </li>
@@ -587,7 +602,7 @@ z-index: 9;
                                 <td class="center">
                                     <div class="label l-bg-orange shadow-style">Inactive</div>
                                 </td>
-                                <td class="center">
+                                <!-- <td class="center">
                                     <a href="edit-leave.html" class="btn btn-tbl-edit">
                                         <i class="material-icons">done</i>
                                     </a>
@@ -597,6 +612,28 @@ z-index: 9;
                                     <a href="#" class="btn btn-tbl-delete">
                                         <i class="material-icons">delete</i>
                                     </a>
+                                </td> -->
+                                <td>
+                                    <ul class="header-dropdown m-r--5">
+                                        <li class="dropdown">
+                                            <a href="#" onClick="return false;" class="dropdown-toggle"
+                                                data-bs-toggle="dropdown" role="button" aria-haspopup="true"
+                                                aria-expanded="false">
+                                                <i class="material-icons">more_vert</i>
+                                            </a>
+                                            <ul class="dropdown-menu float-end">
+                                                <li>
+                                                    <a href="#" onClick="return false;">Accept</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#" onClick="return false;">Reject</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#" onClick="return false;">Delete</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
                                 </td>
                             </tr>
                             <tr class="">
@@ -609,7 +646,7 @@ z-index: 9;
                                 <td class="center">
                                     <div class="label light-green shadow-style">Active</div>
                                 </td>
-                                <td class="center">
+                                <!-- <td class="center">
                                     <a href="edit-leave.html" class="btn btn-tbl-edit">
                                         <i class="material-icons">done</i>
                                     </a>
@@ -619,6 +656,28 @@ z-index: 9;
                                     <a href="#" class="btn btn-tbl-delete">
                                         <i class="material-icons">delete</i>
                                     </a>
+                                </td> -->
+                                <td>
+                                    <ul class="header-dropdown m-r--5">
+                                        <li class="dropdown">
+                                            <a href="#" onClick="return false;" class="dropdown-toggle"
+                                                data-bs-toggle="dropdown" role="button" aria-haspopup="true"
+                                                aria-expanded="false">
+                                                <i class="material-icons">more_vert</i>
+                                            </a>
+                                            <ul class="dropdown-menu float-end">
+                                                <li>
+                                                    <a href="#" onClick="return false;">Accept</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#" onClick="return false;">Reject</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#" onClick="return false;">Delete</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
                                 </td>
                             </tr>
                             <tr class="">
@@ -631,7 +690,7 @@ z-index: 9;
                                 <td class="center">
                                     <div class="label light-green shadow-style">Active</div>
                                 </td>
-                                <td class="center">
+                                <!-- <td class="center">
                                     <a href="edit-leave.html" class="btn btn-tbl-edit">
                                         <i class="material-icons">done</i>
                                     </a>
@@ -641,6 +700,28 @@ z-index: 9;
                                     <a href="#" class="btn btn-tbl-delete">
                                         <i class="material-icons">delete</i>
                                     </a>
+                                </td> -->
+                                <td>
+                                    <ul class="header-dropdown m-r--5">
+                                        <li class="dropdown">
+                                            <a href="#" onClick="return false;" class="dropdown-toggle"
+                                                data-bs-toggle="dropdown" role="button" aria-haspopup="true"
+                                                aria-expanded="false">
+                                                <i class="material-icons">more_vert</i>
+                                            </a>
+                                            <ul class="dropdown-menu float-end">
+                                                <li>
+                                                    <a href="#" onClick="return false;">Accept</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#" onClick="return false;">Reject</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#" onClick="return false;">Delete</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
                                 </td>
                             </tr>
                             <tr class="">
@@ -653,7 +734,7 @@ z-index: 9;
                                 <td class="center">
                                     <div class="label l-bg-orange shadow-style">Inactive</div>
                                 </td>
-                                <td class="center">
+                                <!-- <td class="center">
                                     <a href="edit-leave.html" class="btn btn-tbl-edit">
                                         <i class="material-icons">done</i>
                                     </a>
@@ -663,6 +744,28 @@ z-index: 9;
                                     <a href="#" class="btn btn-tbl-delete">
                                         <i class="material-icons">delete</i>
                                     </a>
+                                </td> -->
+                                <td>
+                                    <ul class="header-dropdown m-r--5">
+                                        <li class="dropdown">
+                                            <a href="#" onClick="return false;" class="dropdown-toggle"
+                                                data-bs-toggle="dropdown" role="button" aria-haspopup="true"
+                                                aria-expanded="false">
+                                                <i class="material-icons">more_vert</i>
+                                            </a>
+                                            <ul class="dropdown-menu float-end">
+                                                <li>
+                                                    <a href="#" onClick="return false;">Accept</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#" onClick="return false;">Reject</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#" onClick="return false;">Delete</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
                                 </td>
                             </tr>
                             <tr class="">
@@ -675,7 +778,7 @@ z-index: 9;
                                 <td class="center">
                                     <div class="label light-green shadow-style">Active</div>
                                 </td>
-                                <td class="center">
+                                <!-- <td class="center">
                                     <a href="edit-leave.html" class="btn btn-tbl-edit">
                                         <i class="material-icons">done</i>
                                     </a>
@@ -685,6 +788,28 @@ z-index: 9;
                                     <a href="#" class="btn btn-tbl-delete">
                                         <i class="material-icons">delete</i>
                                     </a>
+                                </td> -->
+                                <td>
+                                    <ul class="header-dropdown m-r--5">
+                                        <li class="dropdown">
+                                            <a href="#" onClick="return false;" class="dropdown-toggle"
+                                                data-bs-toggle="dropdown" role="button" aria-haspopup="true"
+                                                aria-expanded="false">
+                                                <i class="material-icons">more_vert</i>
+                                            </a>
+                                            <ul class="dropdown-menu float-end">
+                                                <li>
+                                                    <a href="#" onClick="return false;">Accept</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#" onClick="return false;">Reject</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#" onClick="return false;">Delete</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
                                 </td>
                             </tr>
                             <tr class="">
@@ -697,7 +822,7 @@ z-index: 9;
                                 <td class="center">
                                     <div class="label l-bg-orange shadow-style">Inactive</div>
                                 </td>
-                                <td class="center">
+                                <!-- <td class="center">
                                     <a href="edit-leave.html" class="btn btn-tbl-edit">
                                         <i class="material-icons">done</i>
                                     </a>
@@ -707,6 +832,28 @@ z-index: 9;
                                     <a href="#" class="btn btn-tbl-delete">
                                         <i class="material-icons">delete</i>
                                     </a>
+                                </td> -->
+                                <td>
+                                    <ul class="header-dropdown m-r--5">
+                                        <li class="dropdown">
+                                            <a href="#" onClick="return false;" class="dropdown-toggle"
+                                                data-bs-toggle="dropdown" role="button" aria-haspopup="true"
+                                                aria-expanded="false">
+                                                <i class="material-icons">more_vert</i>
+                                            </a>
+                                            <ul class="dropdown-menu float-end">
+                                                <li>
+                                                    <a href="#" onClick="return false;">Accept</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#" onClick="return false;">Reject</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#" onClick="return false;">Delete</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
                                 </td>
                             </tr>
                         </tbody>
