--- a/lighthr/pages/attendance/today-attend.html
+++ b/lighthr/pages/attendance/today-attend.html
@@ -240,7 +240,7 @@
                             <div class="profile-usertitle-job ">Manager </div>
                         </div>
                     </li>
-                    <li class="header">-- Main</li>
+                    <!-- <li class="header">-- Main</li> -->
                     <li class="">
                     <a href="../dashboard/dashboard2.html">
                         <i data-feather="monitor"></i>
@@ -268,18 +268,18 @@
                         </a>
                     </li>
                     <li class="active">
-                        <a href="#" onClick="return false;" class="menu-toggle">
+                        <a href="../attendance/emp-attend.html">
                             <i data-feather="book-open"></i>
                             <span>Attendance</span>
                         </a>
-                        <ul class="ml-menu">
-                            <li class="active">
+                        <!-- <ul class="ml-menu">
+                            <li>
                                 <a href="../attendance/today-attend.html">Admin Attendance</a>
                             </li>
                             <li class="">
                                 <a href="../attendance/emp-attend.html">Employee Attendance</a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </li>
                     <li class="">
                         <a href="../projects/all-services.html">
