--- a/lighthr/pages/employee/all-employees.html
+++ b/lighthr/pages/employee/all-employees.html
@@ -237,20 +237,20 @@
                             <div class="profile-usertitle-job ">Manager </div>
                         </div>
                     </li>
-                    <li class="header">-- Main</li>
-                    <li>
-                        <a href="#" onClick="return false;" class="menu-toggle">
-                            <i data-feather="monitor"></i>
-                            <span>Home</span>
+                    <!-- <li class="header">-- Main</li> -->
+                    <li class="">
+                        <a href="../attendance/emp-attend.html">
+                            <i data-feather="book-open"></i>
+                            <span>Attendance</span>
                         </a>
-                        <ul class="ml-menu">
+                        <!-- <ul class="ml-menu">
                             <li>
-                                <a href="../../index.html">Dashboard 1</a>
+                                <a href="../attendance/today-attend.html">Admin Attendance</a>
                             </li>
-                            <li>
-                                <a href="../dashboard/dashboard2.html">Dashboard 2</a>
+                            <li class="">
+                                <a href="../attendance/emp-attend.html">Employee Attendance</a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </li>
                     <li class="active">
                         <a href="#" onClick="return false;" class="menu-toggle">
