--- a/lighthr/pages/leave/admin-all-leave.html
+++ b/lighthr/pages/leave/admin-all-leave.html
@@ -284,19 +284,19 @@ z-index: 9;
                             <span>Leaves</span>
                         </a>
                     </li>
-                    <li>
-                        <a href="#" onClick="return false;" class="menu-toggle">
+                    <li class="">
+                        <a href="../attendance/emp-attend.html">
                             <i data-feather="book-open"></i>
                             <span>Attendance</span>
                         </a>
-                        <ul class="ml-menu">
+                        <!-- <ul class="ml-menu">
                             <li>
                                 <a href="../attendance/today-attend.html">Admin Attendance</a>
                             </li>
                             <li class="">
                                 <a href="../attendance/emp-attend.html">Employee Attendance</a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </li>
                     
                     <li class="">
@@ -643,7 +643,7 @@ z-index: 9;
                                     <a href="edit-leave.html" class="btn btn-tbl-edit disabled">
                                         <i class="material-icons">create</i>
                                     </a>
-                                    <a href="#" class="btn btn-tbl-delete">
+                                    <a href="#" class="btn btn-tbl-delete" disabled>
                                         <i class="material-icons">close</i>
                                     </a>
                                 </td>
@@ -709,7 +709,7 @@ z-index: 9;
                                     <a href="edit-leave.html" class="btn btn-tbl-edit disabled">
                                         <i class="material-icons">create</i>
                                     </a>
-                                    <a href="#" class="btn btn-tbl-delete">
+                                    <a href="#" class="btn btn-tbl-delete" disabled>
                                         <i class="material-icons">close</i>
                                     </a>
                                 </td>
@@ -775,7 +775,7 @@ z-index: 9;
                                     <a href="edit-leave.html" class="btn btn-tbl-edit disabled">
                                         <i class="material-icons">create</i>
                                     </a>
-                                    <a href="#" class="btn btn-tbl-delete">
+                                    <a href="#" class="btn btn-tbl-delete" disabled>
                                         <i class="material-icons">close</i>
                                     </a>
                                 </td>
