--- a/lighthr/pages/leave/leave-balance.html
+++ b/lighthr/pages/leave/leave-balance.html
@@ -237,7 +237,7 @@
                             <div class="profile-usertitle-job ">Manager </div>
                         </div>
                     </li>
-                    <li class="header">-- Main</li>
+                    <!-- <li class="header">-- Main</li> -->
                     <li>
                         <a href="#" onClick="return false;" class="menu-toggle">
                             <i data-feather="monitor"></i>
