--- a/lighthr/pages/clients/all-clients.html
+++ b/lighthr/pages/clients/all-clients.html
@@ -237,7 +237,7 @@
                             <div class="profile-usertitle-job ">Manager </div>
                         </div>
                     </li>
-                    <li class="header">-- Main</li>
+                    <!-- <li class="header">-- Main</li> -->
                     <li>
                         <a href="#" onClick="return false;" class="menu-toggle">
                             <i data-feather="monitor"></i>
@@ -286,19 +286,19 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="#" onClick="return false;" class="menu-toggle">
+                    <li class="">
+                        <a href="../attendance/emp-attend.html">
                             <i data-feather="book-open"></i>
                             <span>Attendance</span>
                         </a>
-                        <ul class="ml-menu">
+                        <!-- <ul class="ml-menu">
                             <li>
-                                <a href="../attendance/today-attend.html">Today Attendance</a>
+                                <a href="../attendance/today-attend.html">Admin Attendance</a>
                             </li>
-                            <li>
+                            <li class="">
                                 <a href="../attendance/emp-attend.html">Employee Attendance</a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </li>
                     <li class="active">
                         <a href="#" onClick="return false;" class="menu-toggle">
