--- a/lighthr/pages/dashboard/dashboard2.html
+++ b/lighthr/pages/dashboard/dashboard2.html
@@ -273,18 +273,18 @@ td.center, td.left {
                         </a>
                     </li>
                     <li>
-                        <a href="#" onClick="return false;" class="menu-toggle">
+                        <a href="../attendance/emp-attend.html">
                             <i data-feather="book-open"></i>
                             <span>Attendance</span>
                         </a>
-                        <ul class="ml-menu">
+                        <!-- <ul class="ml-menu">
                             <li>
                                 <a href="../attendance/today-attend.html">Admin Attendance</a>
                             </li>
                             <li class="">
                                 <a href="../attendance/emp-attend.html">Employee Attendance</a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </li>
                     
                     <li class="">
@@ -301,13 +301,28 @@ td.center, td.left {
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="../admin/admin-workflow.html">Admin Workflow</a>
+                                <a href="../admin/admin-workflow.html">Workflow</a>
                             </li>
                             <li class="">
-                                <a href="../admin/admin-all-leave.html">Admin Leave</a>
+                                <a href="../admin/admin-all-leave.html">Leave</a>
                             </li>
                             <li class="">
-                                <a href="../admin/admin-all-services.html">Admin Service Request</a>
+                                <a href="../admin/admin-all-services.html">Request</a>
+                            </li>
+                            <li class="">
+                                <a href="../admin/admin-attendance.html">Attendance</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Public Holidays</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Leave Category</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Leave Types</a>
+                            </li>
+                            <li class="">
+                                <a href="#">Calendar settings</a>
                             </li>
                         </ul>
                     </li>
