dashboard page reporting added and profile page new tabs added

--- a/lighthr/pages/examples/sign-up.html
+++ b/lighthr/pages/examples/sign-up.html
@@ -302,6 +302,7 @@ a.ghost{
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
   border-width: 0px;
+}
 </style>
 
 <body>
@@ -315,6 +316,7 @@ a.ghost{
 			<input type="text" placeholder="Employee ID" value="Employee ID" style="margin-top: 45px;" />
 			<input type="text" placeholder="DOB" value="DOB" />
 			<select class="form-control">
+				<option>Gender</option>
 				<option>Male</option>
 				<option>Female</option>
 				<option>TransGender</option>
@@ -342,6 +344,4 @@ a.ghost{
 	<script src="../../assets/js/pages/examples/login-register.js"></script>
 </body>
 
-
-<!-- Mirrored from www.einfosoft.com/templates/admin/atrio/source/lighthr/pages/examples/login-register.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 Oct 2022 06:54:49 GMT -->
 </html>
