--- a/lighthr/pages/examples/login-register.html
+++ b/lighthr/pages/examples/login-register.html
@@ -329,11 +329,12 @@ a.ghost{
 				<input type="text" placeholder="Employee ID" value="Employee ID" class="mt-5" />
 				<input type="text" placeholder="DOB" value="DOB" />
 				<select class="form-control">
+					<option>Gender</option>
 					<option>Male</option>
 					<option>Female</option>
 					<option>TransGender</option>
 				</select>
-				<input type="text" placeholder="Passport ID or Emirates ID" value="Passport ID or Emirates ID" />
+				<input type="text" placeholder="Passport ID/Emirates ID" value="Passport ID/Emirates ID" />
 				<a href="../dashboard/dashboard2.html" class="ghost mt-4">Sign Up</a>
 			</form>
 		</div>
@@ -344,7 +345,7 @@ a.ghost{
 				<span>Please fill in the details to login</span>
 				<input type="text" placeholder="Employee ID" value="Employee ID" class="mt-5" />
 				<input type="text" placeholder="DOB" value="DOB" />
-				<a href="#">Forgot your password?</a>
+				<!-- <a href="#">Forgot your password?</a> -->
 				<a href="../dashboard/dashboard2.html" class="ghost">Sign In</a>
 			</form>
 		</div>
